[package]
name = "jammi-wire"
description = "The Jammi gRPC wire substrate: generated jammi.v1 tonic stubs, proto↔domain conversions, and the shared session transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
jammi-db.workspace = true
jammi-numerics.workspace = true
# `jammi-lora` is pulled for its candle-free config vocabulary (the
# `BackboneDtype` / `LoraInitMode` fields of `FineTuneConfig`); the workspace pins
# it `default-features = false`, so no candle stack rides in.
jammi-lora = { workspace = true, default-features = false }

tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true
arrow.workspace = true
arrow-schema.workspace = true
arrow-array.workspace = true
arrow-ipc.workspace = true
arrow-flight.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
tonic-build.workspace = true
tonic-prost-build.workspace = true

[dev-dependencies]
statrs.workspace = true
rand.workspace = true
rand_distr.workspace = true
